--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "flagle",
-  "homepage": "https://<your-username>.github.io/<repository-name>",
+  "homepage": "https://yasirFrontEndDev.github.io/flagle-react-un",
   "version": "1.1.0",
   "description": "Guess the hidden flag in a game of Flagle!",
   "private": false,
