--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "flagle",
   "version": "1.1.0",
+  "homepage": "https://yasirFrontEndDev.github.io/flagle-react-un",
   "description": "Guess the hidden flag in a game of Flagle!",
   "private": false,
   "dependencies": {
