--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^5.5.0",
     "@rarebearsoft/marvin": "^0.0.2",
     "@testing-library/jest-dom": "^5.16.2",
+    "ajv": "^6.12.6",
     "eslint-config-react-app": "^7.0.0",
     "firebase": "^9.6.8",
     "flagle": "file:",
